# tui-snake

./: Cargo.toml  LICENSE  README.md
src/: game.rs  main.rs
src/game/: food.rs  game_state.rs  snake.rs  utils.rs
